tests/samples/failing/08_overload_type_mismatch.mlang
fn add |a: i32, b: i32|->i32 $a + b$;
fn add |a: f64, b: f64|->f64 $a + b$;

let value add 1 "oops";
